[tool.poetry]
name = "autotranslator"
version = "0.1.0"
description = ""
authors = ["Eugene Cheltsov <chill.icp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
googletrans = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
