[tool.poetry]
name = "autotranslator"
version = "0.1.0"
description = ""
authors = ["Eugene Cheltsov <chill.icp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
googletrans = "^4.0.0rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
